@@ -1,36 +1,96 @@
 package github.nighter.smartspawner.hooks.protections.api;
 
+import github.nighter.smartspawner.SmartSpawner;
 import com.iridium.iridiumskyblock.api.IridiumSkyblockAPI;
 import com.iridium.iridiumskyblock.database.Island;
 import com.iridium.iridiumskyblock.database.User;
 import com.iridium.iridiumskyblock.dependencies.iridiumcore.Item;
 import com.iridium.iridiumskyblock.dependencies.iridiumteams.Permission;
-import com.iridium.iridiumskyblock.dependencies.iridiumteams.PermissionType;
 import com.iridium.iridiumskyblock.dependencies.xseries.XMaterial;
-import org.bukkit.Bukkit;
+import github.nighter.smartspawner.language.format.ColorUtil;
+import github.nighter.smartspawner.updates.YamlMigrator;
 import org.bukkit.Location;
+import org.bukkit.configuration.file.YamlConfiguration;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Arrays;
+import java.io.File;
+import java.io.IOException;
+import java.io.InputStream;
+import java.util.List;
 import java.util.Optional;
 
 public class IridiumSkyblock {
-    public static void init() {
+    private static final String FILE_NAME = "iridium_skyblock.yml";
+    private static final String DEFAULT_LOCALE = "en_US";
+    private static YamlConfiguration language = new YamlConfiguration();
+
+    public static void init(SmartSpawner plugin) {
+        loadLanguage(plugin);
+
         Permission spawnerOpenMenuPermission = new Permission(
-                new Item(XMaterial.SPAWNER, 38, 1, "&bSpawner Menu Permission", Arrays.asList(
-                        "&7Permission for permit users to open spawners menu.",
-                        "", "&b&lPermission",
-                        "%permission%")
+                new Item(
+                        XMaterial.SPAWNER,
+                        38,
+                        1,
+                        text(plugin, "iridium_skyblock.permissions.open_menu.name", "&bSpawner Menu Permission"),
+                        lore(plugin, "iridium_skyblock.permissions.open_menu.lore", List.of(
+                                "&7Permission for permit users to open spawners menu.",
+                                "",
+                                "&b&lPermission",
+                                "%permission%"
+                        ))
                 ), 1, 1);
         Permission spawnerStackPermission = new Permission(
-                new Item(XMaterial.SPAWNER, 39, 1, "&7Spawner Stack Permission", Arrays.asList(
-                        "&7Permission for permit users to stack spawners.",
-                        "", "&b&lPermission",
-                        "%permission%")
+                new Item(
+                        XMaterial.SPAWNER,
+                        39,
+                        1,
+                        text(plugin, "iridium_skyblock.permissions.stack.name", "&7Spawner Stack Permission"),
+                        lore(plugin, "iridium_skyblock.permissions.stack.lore", List.of(
+                                "&7Permission for permit users to stack spawners.",
+                                "",
+                                "&b&lPermission",
+                                "%permission%"
+                        ))
                 ), 1, 1);
         IridiumSkyblockAPI.getInstance().addPermission(spawnerOpenMenuPermission, "SpawnerOpenMenuPermission");
         IridiumSkyblockAPI.getInstance().addPermission(spawnerStackPermission, "SpawnerStackPermission");
+    }
+
+    private static void loadLanguage(SmartSpawner plugin) {
+        String locale = plugin.getConfig().getString("language", DEFAULT_LOCALE);
+        String localeResource = "language/" + locale + "/" + FILE_NAME;
+        String resourcePath = resourceExists(plugin, localeResource)
+                ? localeResource
+                : "language/" + DEFAULT_LOCALE + "/" + FILE_NAME;
+        File languageFile = new File(plugin.getDataFolder(), "language/" + locale + "/" + FILE_NAME);
+
+        YamlMigrator.migrate(languageFile, plugin.getResource(resourcePath), java.util.List.of(), plugin.getLogger());
+        language = YamlConfiguration.loadConfiguration(languageFile);
+    }
+
+    private static boolean resourceExists(SmartSpawner plugin, String resourcePath) {
+        try (InputStream input = plugin.getResource(resourcePath)) {
+            return input != null;
+        } catch (IOException ignored) {
+            return false;
+        }
+    }
+
+    private static String text(SmartSpawner plugin, String path, String fallback) {
+        String value = language.getString(path, fallback);
+        return ColorUtil.translateHexColorCodes(value);
+    }
+
+    private static List<String> lore(SmartSpawner plugin, String path, List<String> fallback) {
+        List<String> lines = language.getStringList(path);
+        if (lines.isEmpty()) {
+            lines = fallback;
+        }
+        return lines.stream()
+                .map(ColorUtil::translateHexColorCodes)
+                .toList();
     }
 
     public static boolean canPlayerStackBlock(@NotNull Player player, @NotNull Location location) {
